# organizer

./: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  README.md
lxqt-organizer/: CMakeLists.bak  CMakeLists.old  CMakeLists.txt  appointment.h  appointmentmodel.cpp  contact.h  contactmodel.cpp  dbcontroller.cpp  dbcontroller.h  dbmanager.cpp  dbmanager.h  dbussessionmessage.cpp  dbussessionmessage.h  dialogabout.cpp  dialogabout.h  dialogabout.ui  dialogaddappointment.cpp  dialogaddappointment.h  dialogaddappointment.ui  dialogaddcontact.cpp  dialogaddcontact.h  dialogaddcontact.ui  dialogaddevent.cpp  dialogaddevent.h  dialogaddevent.ui  dialogsetappointment.cpp  dialogsetappointment.h  dialogsetappointment.ui  event.h  eventmodel.cpp  eventmodel.h  icon_resource.qrc  lxqt-organizer.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  proxymodel.cpp  proxymodel.h  proxymodelcontacts.cpp  (+8 more)
scripts/: CMakeLists.txt  lxqt-organizer-install-from-source-instructions.txt  lxqt-organizer.desktop  organizer.desktop
src/: CMakeLists-old.txt  CMakeLists.txt  appointment.h  appointmentmodel.cpp  appointmentmodel.h  birthday.h  birthdaylistmodel.cpp  birthdaylistmodel.h  birthdaymodel.cpp  birthdaymodel.h  contact.h  contactmodel.cpp  contactmodel.h  daylistmodel.cpp  daylistmodel.h  daymodel.cpp  daymodel.h  dbmanager.cpp  dbmanager.h  dbussessionmessage.cpp  dbussessionmessage.h  dialogabout.cpp  dialogabout.h  dialogabout.ui  dialogappointment.cpp  dialogappointment.h  dialogappointment.ui  dialogappointmentupdate.cpp  dialogappointmentupdate.h  dialogappointmentupdate.ui  dialogcontact.cpp  dialogcontact.h  dialogcontact.ui  dialogpreferences.cpp  dialogpreferences.h  dialogpreferences.ui  dialogrepeatappointment.cpp  dialogrepeatappointment.h  dialogrepeatappointment.ui  dialogshowdaydetails.cpp  (+32 more)
src/translations/: organizer.ts  organizer_ru.ts  strings_cs.xml  strings_de.xml  strings_fr.xml  strings_gb.xml  strings_hr.xml  strings_jp.xml
